// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarChart Component renders a normal bar chart correctly 1`] = `
<div
  className="LiftTooltip"
>
  <ResponsiveContainer
    className="SignalsBarChart"
    debounce={0}
    height={50}
    width={100}
  >
    <ComposedChart
      barCategoryGap={1}
      barGap={4}
      data={
        Array [
          Object {
            "date": "2011-01-01",
            "value": 2,
          },
        ]
      }
      layout="horizontal"
      margin={
        Object {
          "bottom": 5,
          "left": 18,
          "right": 0,
          "top": 12,
        }
      }
      reverseStackOrder={false}
      stackOffset="none"
    >
      <Bar
        animationBegin={0}
        animationDuration={400}
        animationEasing="ease"
        cursor="pointer"
        data={Array []}
        dataKey="noKey"
        hide={false}
        isAnimationActive={false}
        layout="vertical"
        legendType="rect"
        minPointSize={0}
        onAnimationEnd={[Function]}
        onAnimationStart={[Function]}
        onClick={[MockFunction]}
        shape={[Function]}
        stackId="stack"
        xAxisId={0}
        yAxisId={0}
      />
      <CartesianGrid
        fill="none"
        horizontal={true}
        horizontalFill={Array []}
        horizontalPoints={Array []}
        shapeRendering="crispEdges"
        stroke="#e1e1e6"
        vertical={false}
        verticalFill={Array []}
        verticalPoints={Array []}
      />
      <YAxis
        allowDataOverflow={false}
        allowDecimals={true}
        allowDuplicatedCategory={true}
        axisLine={false}
        domain={
          Array [
            0,
            "auto",
          ]
        }
        height={0}
        hide={false}
        minTickGap={2}
        mirror={false}
        orientation="left"
        padding={
          Object {
            "bottom": 0,
            "top": 0,
          }
        }
        reversed={false}
        scale="auto"
        tickCount={5}
        tickLine={false}
        type="number"
        width={30}
        yAxisId={0}
      />
      <XAxis
        allowDataOverflow={false}
        allowDecimals={true}
        allowDuplicatedCategory={true}
        axisLine={false}
        dataKey="date"
        domain={
          Array [
            0,
            "auto",
          ]
        }
        height={30}
        hide={false}
        mirror={false}
        orientation="bottom"
        padding={
          Object {
            "left": 12,
            "right": 12,
          }
        }
        reversed={false}
        scale="auto"
        shapeRendering="crispEdges"
        tickCount={5}
        tickLine={false}
        type="category"
        width={0}
        xAxisId={0}
      />
      <Tooltip
        active={false}
        animationDuration={400}
        animationEasing="ease"
        content={
          <Tooltip
            offset={25}
            width="200px"
          >
            [MockFunction]
          </Tooltip>
        }
        contentStyle={Object {}}
        coordinate={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        cursor={false}
        cursorStyle={Object {}}
        filterNull={true}
        isAnimationActive={false}
        itemSorter={[Function]}
        itemStyle={Object {}}
        labelStyle={Object {}}
        offset={25}
        position={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        separator=" : "
        useTranslate3d={false}
        viewBox={
          Object {
            "x1": 0,
            "x2": 0,
            "y1": 0,
            "y2": 0,
          }
        }
        wrapperStyle={Object {}}
      />
      <Bar
        activeFill="#activeFill"
        animationBegin={0}
        animationDuration={400}
        animationEasing="ease"
        cursor="pointer"
        data={Array []}
        dataKey="value"
        fill="#fill"
        hide={false}
        isAnimationActive={false}
        key="value"
        layout="vertical"
        legendType="rect"
        minPointSize={1}
        onAnimationEnd={[Function]}
        onAnimationStart={[Function]}
        onClick={[MockFunction]}
        shape={[Function]}
        stackId="stack"
        xAxisId={0}
        yAxisId={0}
      />
      0
      0
    </ComposedChart>
  </ResponsiveContainer>
</div>
`;

exports[`BarChart Component renders a normal bar chart with correct fill for non-selected/hovered threshold events 1`] = `
Object {
  "animationBegin": 0,
  "animationDuration": 1500,
  "animationEasing": "ease",
  "date": "2011-01-01",
  "fill": "#fill",
  "health_score": 75,
  "height": 0,
  "isAnimationActive": false,
  "isUpdateAnimationActive": false,
  "opacity": 0,
  "radius": 0,
  "ranking": "warning",
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`BarChart Component renders a normal bar chart with correct fill for selected/hovered non-threshold events 1`] = `
Object {
  "animationBegin": 0,
  "animationDuration": 1500,
  "animationEasing": "ease",
  "date": "2011-01-01",
  "fill": "#fill",
  "height": 0,
  "injections": 75,
  "isAnimationActive": false,
  "isUpdateAnimationActive": false,
  "opacity": 0,
  "radius": 0,
  "ranking": "warning",
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`BarChart Component renders a normal bar chart with correct fill for selected/hovered threshold events 1`] = `
Object {
  "animationBegin": 0,
  "animationDuration": 1500,
  "animationEasing": "ease",
  "date": "2011-01-01",
  "fill": "#fill",
  "health_score": 75,
  "height": 0,
  "isAnimationActive": false,
  "isUpdateAnimationActive": false,
  "opacity": 0,
  "radius": 0,
  "ranking": "warning",
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`BarChart Component renders a stacked bar chart correctly 1`] = `
Array [
  <Bar
    animationBegin={0}
    animationDuration={400}
    animationEasing="ease"
    cursor="pointer"
    data={Array []}
    dataKey="ab"
    fill="blue"
    hide={false}
    isAnimationActive={false}
    key="ab"
    layout="vertical"
    legendType="rect"
    minPointSize={1}
    onAnimationEnd={[Function]}
    onAnimationStart={[Function]}
    onClick={[MockFunction]}
    shape={[Function]}
    stackId="stack"
    xAxisId={0}
    yAxisId={0}
  />,
  <Bar
    animationBegin={0}
    animationDuration={400}
    animationEasing="ease"
    cursor="pointer"
    data={Array []}
    dataKey="cd"
    fill="red"
    hide={false}
    isAnimationActive={false}
    key="cd"
    layout="vertical"
    legendType="rect"
    minPointSize={1}
    onAnimationEnd={[Function]}
    onAnimationStart={[Function]}
    onClick={[MockFunction]}
    shape={[Function]}
    stackId="stack"
    xAxisId={0}
    yAxisId={0}
  />,
]
`;

exports[`BarChart Component renders background bars with no opacity if unselected 1`] = `
<Rectangle
  animationBegin={0}
  animationDuration={1500}
  animationEasing="ease"
  height={0}
  isAnimationActive={false}
  isUpdateAnimationActive={false}
  opacity={0}
  radius={0}
  test="test"
  width={0}
  x={0}
  y={0}
/>
`;

exports[`BarChart Component renders background bars with opacity if selected 1`] = `
<Rectangle
  animationBegin={0}
  animationDuration={1500}
  animationEasing="ease"
  height={0}
  isAnimationActive={false}
  isUpdateAnimationActive={false}
  opacity={0}
  radius={0}
  test="test"
  width={0}
  x={0}
  y={0}
/>
`;

exports[`BarChart Component should display x reference lines 1`] = `
<ReferenceLine
  fill="none"
  fillOpacity={1}
  ifOverflow="discard"
  isFront={false}
  key="0"
  shapeRendering="crispEdges"
  stroke="green"
  strokeWidth={2}
  style={
    Object {
      "pointerEvents": "none",
    }
  }
  x="2011-01-01"
  xAxisId={0}
  yAxisId={0}
/>
`;

exports[`BarChart Component should display x reference lines 2`] = `
<ReferenceLine
  fill="none"
  fillOpacity={1}
  ifOverflow="discard"
  isFront={false}
  key="1"
  shapeRendering="crispEdges"
  stroke="red"
  strokeWidth={2}
  style={
    Object {
      "pointerEvents": "none",
    }
  }
  x="2011-01-03"
  xAxisId={0}
  yAxisId={0}
/>
`;

exports[`BarChart Component should display y reference lines 1`] = `
<ReferenceLine
  fill="none"
  fillOpacity={1}
  ifOverflow="discard"
  isFront={false}
  key="0"
  shapeRendering="crispEdges"
  stroke="green"
  strokeWidth={2}
  style={
    Object {
      "pointerEvents": "none",
    }
  }
  xAxisId={0}
  y={80}
  yAxisId={0}
/>
`;

exports[`BarChart Component should display y reference lines 2`] = `
<ReferenceLine
  fill="none"
  fillOpacity={1}
  ifOverflow="discard"
  isFront={false}
  key="1"
  shapeRendering="crispEdges"
  stroke="red"
  strokeWidth={2}
  style={
    Object {
      "pointerEvents": "none",
    }
  }
  xAxisId={0}
  y={55}
  yAxisId={0}
/>
`;
